syntax = "proto3";
package cosmos.oracle.v1;

option go_package            = "github.com/cosmos/cosmos-sdk/x/oracle/types";
option (gogoproto.equal_all) = true;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";

// Msg defines the oracle Msg service.
service Msg {
  rpc Claim(MsgClaim) returns (MsgClaimResponse);
}

// MsgClaim defines the Msg/Claim request type
message MsgClaim {
  option (cosmos.msg.v1.signer) = "from_address";

  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string from_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint32 chain_id = 2;
  uint64 sequence = 3;
  uint64 timestamp = 4;
  bytes payload = 5;
  repeated fixed64 vote_address_set  = 6;
  bytes agg_signature  = 7;
}

// MsgClaimResponse defines the Msg/Claim response type
message MsgClaimResponse {}
